k8s/geweb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ge-web-deployment
  namespace: ge-dev
  labels:
    app: ge-web
spec:
  replicas: 1
  minReadySeconds: 7
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  selector:
    matchLabels:
      app: ge-web
  template:
    metadata:
      labels:
        app: ge-web
    spec:
      nodeSelector:          
        agentpool: igserver
      tolerations:
      - key: "sku"
        operator: "Equal"
        value: "gameengine"
        effect: "NoSchedule"  
      imagePullSecrets:
      - name: ghcr-pull-secret
      # RECOMMENDED: Wait for Redis to be reachable
      containers:
      - name: ge-web-container
        image: ghcr.io/rajp1011/pfhbe/geweb:v9.0.4
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        startupProbe:
          httpGet:
            path: /healthz
            port: 8080
          failureThreshold: 30  # Allow 30 tries
          periodSeconds: 5      # Check every 5s        
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /ready
            port: 8080
          periodSeconds: 10
        resources:
          requests:
            cpu: "150m"
            memory: "256Mi"
          limits:
            cpu: "300m"
            memory: "512Mi"

        volumeMounts:
        - name: ge-service-config-volume
          mountPath: /mnt
          readOnly: false

      volumes:
      - name: ge-service-config-volume
        persistentVolumeClaim:
          claimName: ge-pvc
