k8s/redis-deployment.yaml
# -----------------------------------------------------------------
# Redis Deployment:
# -----------------------------------------------------------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-master
  namespace: ge-dev
  labels:
    app: redis
    role: master
spec:  
  replicas: 1
  selector:
    matchLabels:
      app: redis
      role: master
  template:
    metadata:
      labels:
        app: redis
        role: master
    spec:
      nodeSelector:
        agentpool: igserver
      tolerations:
      - key: "sku"
        operator: "Equal"
        value: "gameengine"
        effect: "NoSchedule"  
      containers:
      - name: master        
        image: redis:6.2-alpine
        ports:        
        - containerPort: 6379
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "200m"
            memory: "512Mi"
