k8s/redis-service.yaml
# -----------------------------------------------------------------
# Redis Service:
# -----------------------------------------------------------------
apiVersion: v1
kind: Service
metadata:
  name: redis 
  namespace: ig-dev
  labels:
    app: redis
spec:
  ports:  
  - port: 6379
    targetPort: 6379  
  selector:
    app: redis
    role: master
